# University-Code

./: CMakeLists.txt  readme.md
headers/: ClassworkOrganiser.h  DirectoryManager.h  SubjectManager.h  UserInputHandler.h
src/: ClassworkOrganiser.cpp  DirectoryManager.cpp  SubjectManager.cpp  UserInputHandler.cpp  main.cpp
